CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

PROJECT(mLib)
SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(ZLIB REQUIRED)
FILE(GLOB SOURCE ${CMAKE_CURRENT_LIST_DIR}/src/mLibInclude.cpp)
ADD_LIBRARY(mLib SHARED ${SOURCE})
TARGET_INCLUDE_DIRECTORIES(mLib PRIVATE ${CMAKE_CURRENT_LIST_DIR}/include)
TARGET_LINK_LIBRARIES(mLib PUBLIC ZLIB::ZLIB)
